# Zircon

./: .gitignore  Cargo.toml  README.md
asset_library/: Cargo.toml
asset_library/src/: basic_functions.rs  format.rs  lib.rs
asset_library/src/archive/: builder.rs  header.rs  mod.rs
asset_library/src/asset_system/: error.rs  mod.rs
asset_library/src/vfs/: error.rs  mod.rs  physical_mount_point.rs
asset_registry/: Cargo.toml
asset_registry/src/: asset_descriptor.rs  asset_source.rs  descriptors.rs  ids.rs  lib.rs  registry.rs
asset_registry/src/archive/: archive.rs  builder.rs  error.rs  header.rs  mod.rs  test.rs
asset_registry/src/old/: descriptors.rs  error.rs
asset_registry/src/tests/: mod.rs
engine/: Cargo.toml
engine/assets/: Cargo.toml
engine/assets/src/: asset_buffer.rs  asset_descriptor.rs  cache.rs  formats.rs  lib.rs  registry.rs
engine/graphics/: Cargo.toml
engine/graphics/src/: lib.rs  vertex_input_layout.rs
engine/math/: Cargo.toml
engine/src/: lib.rs
engine/src/engine/: controller.rs  create_info.rs  gameloop_timer.rs  mod.rs
engine/src/engine_stages/: inputs.rs  mod.rs  render_stage.rs  render_stage_container.rs  stage_manager.rs  update_stage.rs  update_stage_container.rs  update_thread_handler_container.rs
engine/src/message_bus/: message.rs  message_bus.rs  message_receiver.rs  message_sender.rs  mod.rs
engine/src/platform/: interface.rs  messages.rs  mod.rs  window.rs
engine/src/resource_manager/: manager.rs  thread_local_manager.rs
engine/src/scene_manager/: scene.rs  scene_manager.rs
game/: Cargo.toml  build.rs
game/asset_archives/: assets.harc  assets.harchive  assets.zarc
game/assets/config/: game.toml  game.yaml  graphics.toml  vulkan.toml  vulkan.yaml
game/assets/meshes/: converted_obj.toml  triangle_2d_ndc.yaml
game/assets/shaders/: vs_triangle.glsl
game/src/: main.rs  mesh_writing.rs
graphics/: Cargo.toml
graphics/src/: lib.rs  vertex_input_layout.rs
graphics/src/common/: create_info.rs  graphics_options.rs  instance_setup.rs  stage.rs  update_receivers.rs  vk_library_wrapper.rs
graphics/src/components/: camera.rs  camera_manager.rs  mesh_renderer.rs  transform.rs
graphics/src/device/: device_selection.rs  graphics_device.rs  mod.rs  queue_types.rs  setup.rs
graphics/src/pipeline/: shader.rs
graphics/src/pipeline_setup/: mesh_reader.rs  mod.rs
graphics/src/render_paths/: forward.rs  render_path.rs
graphics/src/render_target/: mod.rs  render_layer.rs  render_plugin.rs  swap_chain.rs  window_render_target.rs  window_render_target_binding.rs
graphyte_asset_library/: Cargo.toml
graphyte_asset_library/src/: lib.rs
graphyte_asset_library/src/archive/: mod.rs
graphyte_asset_library/src/asset_system/: error.rs  mod.rs
graphyte_asset_library/src/vfs/: archive_mount_point.rs  mod.rs
graphyte_engine/: Cargo.toml
graphyte_engine/src/: lib.rs
graphyte_engine/src/engine/: controller.rs  create_info.rs
graphyte_engine/src/engine_stages/: inputs.rs  mod.rs  render_stage.rs  render_stage_container.rs  update_stage.rs  update_stage_container.rs
graphyte_engine/src/event_manager/: event.rs  event_handler.rs  event_manager.rs  mod.rs
graphyte_engine/src/message_bus/: message.rs  message_bus.rs  message_handler.rs  message_receiver.rs  message_sender.rs  mod.rs  registerers.rs
graphyte_engine/src/platform/: interface.rs  messages.rs  mod.rs
graphyte_engine/src/resource_manager/: manager.rs  mod.rs  thread_local_manager.rs
graphyte_engine/src/scene_manager/: scene.rs  scene_manager.rs
graphyte_game/: Cargo.toml
graphyte_game/asset_archives/config/: cube_buf_test.yaml  game.yaml  init_test.wasm  vulkan.yaml
graphyte_game/src/: main.rs
graphyte_graphics_stage/: Cargo.toml
graphyte_graphics_stage/src/: lib.rs
graphyte_graphics_stage/src/backends/: mod.rs
graphyte_graphics_stage/src/common/: backend.rs  create_info.rs  debug_extension.rs  device_and_path_setup.rs  device_feature_utils.rs  graphics_options.rs  instance_setup.rs  messages.rs  mod.rs  render_target.rs  stage.rs  update_receiver.rs  update_receivers.rs  update_thread_handler.rs  vk_library_wrapper.rs
graphyte_graphics_stage/src/components/: camera.rs  camera_manager.rs  meshrenderer.rs  mod.rs  transform.rs
graphyte_graphics_stage/src/device/: device_selection.rs  graphics_device.rs  mod.rs  queue_types.rs  setup.rs
graphyte_graphics_stage/src/render_paths/: forward.rs  mod.rs  render_path.rs  swap_chain.rs
graphyte_graphics_stage/src/render_target/: mod.rs  render_target.rs  swap_chain.rs  window_render_target.rs  window_render_target_binding.rs
graphyte_vk_graphics_stage/: Cargo.toml
graphyte_vk_graphics_stage/src/: create_info.rs  error.rs  lib.rs
graphyte_vk_graphics_stage/src/components/: camera.rs
graphyte_vk_graphics_stage/src/config/: device_features.rs
graphyte_winit_platform/: Cargo.toml
graphyte_winit_platform/src/: interface.rs  platform.rs  window.rs
magnetar_asset_library/: Cargo.toml
magnetar_asset_library/src/: archive.rs  basic_functions.rs  format.rs  lib.rs  test.rs
magnetar_asset_library/src/archive/: mod.rs  (+3 more)
magnetar_engine/: Cargo.toml
magnetar_engine/src/: lib.rs
magnetar_game/: Cargo.toml
magnetar_game/src/: main.rs
magnetar_vk_graphics_stage/: Cargo.toml
magnetar_vk_graphics_stage/src/: create_info.rs  error.rs  graphics_stage.rs  lib.rs  vk_window.rs
magnetar_winit_platform/: Cargo.toml
magnetar_winit_platform/src/: interface.rs  lib.rs  platform.rs  window.rs
spacebar_engine/: Cargo.toml
spacebar_engine/src/: lib.rs
spacebar_game/: Cargo.toml
spacebar_game/src/: main.rs
spacebar_vk_graphics_stage/: Cargo.toml
spacebar_vk_graphics_stage/src/: create_info.rs  lib.rs
spacebar_winit_platform/: Cargo.toml
spacebar_winit_platform/src/: interface.rs  platform.rs  window.rs
tools/gltf_extract_meshes/: Cargo.toml  cube.glb  cube2.glb
tools/zr_convert_gltf/: Cargo.toml
tools/zr_mesh_tools/: Cargo.toml
utils/: Cargo.toml
utils/src/: as_any.rs  color.rs  defer_drop.rs  dispatcher.rs  lib.rs  log.rs  split_view.rs  squirre13.rs
(+302 files in other folders)
