[workspace]
default-members = ["game"]
members = [
    "engine",
    "editor",
    "game",
    "math",
    "utils",
    "graphics",
    "winit_platform",
    "asset_registry",
    "asset_library",
    "scripting",
    "shader",
    "mesh",
    "tools/gltf_extract_meshes",
    "tools/shader_compiler",
]
