[package]
name = "asset_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["format_json", "format_toml"]
format_json = ["serde_json"]
format_toml = ["toml"]

[dependencies]
utils = { path = "../utils" }
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.9"
serde_cbor = "0.11"
lz4_flex = { version = "0.9.0", default-features = false }
zstd = "0.11"

toml = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"
