[package]
name = "asset_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
arrayvec = { version = "0.7", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_cbor = "0.11"
serde_json = "1.0"
toml = "0.5"
hashbrown = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
zstd = "0.11"
tokio = { version = "1.18", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1.18", features = ["fs", "io-util", "rt", "macros"] }
rand = "0.8"
