[package]
name = "asset_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
dashmap = "5.3.4"
arrayvec = { version = "0.7", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
toml = "0.5"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
zstd = "0.11"
async-compression = { version = "0.3", features = ["tokio", "zstd"] }
tokio = { version = "1.18", features = ["fs", "io-util"] }
async-recursion = "1.0"

[dev-dependencies]
tokio = { version = "1.18", features = ["fs", "io-util", "rt", "macros"] }
rand = "0.8"
