[package]
name = "zircon_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
utils = { path = "../utils" }
zircon_assets = { path = "assets" }
serde = { version = "1.0", features = ["derive"] }
raw-window-handle = "0.4.0"
dashmap = "5.4.0"
shard-ecs = { version = "0.2.6", features = ["derive"] }
crossbeam = "0.8"
