[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
winit_platform = { path = "../winit_platform" }
graphics = { path = "../graphics" }
scripting = { path = "../scripting" }
editor = { path = "../editor" }
math = { path = "../math" }
mesh = { path = "../mesh" }
asset_library = { path = "../asset_library" }
serde_yaml = "0.8"


[build-dependencies]
asset_library = { path = "../asset_library" }
