[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
utils = { path = "../utils" }
winit_platform = { path = "../winit_platform" }
graphics = { path = "../graphics" }
scripting = { path = "../scripting" }
math = { path = "../math" }
mesh = { path = "../mesh" }
asset_registry = { path = "../asset_registry" }
serde_yaml = "0.9.9"

[build-dependencies]
asset_registry = { path = "../asset_registry" }
tokio = { version = "1.18", features = ["fs", "io-util", "rt"] }
