[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zircon_engine = { path = "../engine" }
utils = { path = "../utils" }
zircon_platform_winit = { path = "../engine/platforms/winit" }
graphics = { path = "../graphics" }
scripting = { path = "../scripting" }
zircon_math = { path = "../engine/math" }
mesh = { path = "../mesh" }
zircon_assets = { path = "../engine/assets" }
serde_yaml = "0.9.9"

[build-dependencies]
zircon_assets = { path = "../engine/assets" }
tokio = { version = "1.18", features = ["fs", "io-util", "rt"] }
