[package]
name = "graphyte_asset_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["format_json", "format_toml"]
format_json = ["serde_json"]
format_toml = ["toml"]

[dependencies]
graphyte_utils = { path = "../graphyte_utils" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_cbor = "0.11"
lz4_flex = { version = "0.8.0", default-features = false }

toml = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"
