[package]
name = "graphyte_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vulkan_api", "open_gl_api"]
vulkan_api = ["graphyte_graphics_stage/vulkan_api"]
metal_api = ["graphyte_graphics_stage/metal_api"]
open_gl_api = ["graphyte_graphics_stage/open_gl_api"]

[dependencies]
graphyte_engine = { path = "../graphyte_engine" }
graphyte_winit_platform = { path = "../graphyte_winit_platform" }
graphyte_graphics_stage = { path = "../graphyte_graphics_stage" }
