[package]
name = "graphyte_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphyte_engine = { path = "../graphyte_engine" }
graphyte_winit_platform = { path = "../graphyte_winit_platform" }
graphyte_graphics_stage = { path = "../graphyte_graphics_stage" }
graphyte_scripting_stage = { path = "../graphyte_scripting_stage" }