[package]
name = "graphyte_graphics_stage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vulkan_api", "open_gl_api", "ui"]

vulkan_api = ["erupt"]

open_gl_api = ["gl"]

metal_api = ["metal"]

ui = ["egui"]

[dependencies]
graphyte_engine = { path = "../graphyte_engine" }
graphyte_math = { path = "../graphyte_math" }
graphyte_utils = { path = "../graphyte_utils" }
shard-ecs = "0.2.5"
serde = { version = "1.0", features = ["derive"] }

egui = { version = "0.15", optional = true }
erupt = { version = "0.19", features = ["surface", "loading"], optional = true }
gl = { version = "0.14", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = { version = "0.23", optional = true }