[package]
name = "graphyte_graphics_stage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphyte_engine = { path = "../graphyte_engine" }
graphyte_math = { path = "../graphyte_math" }
graphyte_utils = { path = "../graphyte_utils" }
serde = { version = "1.0", features = ["derive"] }

egui = { version = "0.15" }
erupt = { version = "0.19", features = ["surface", "loading"] }
ash = { version = "0.33" }