[package]
name = "graphyte_vk_graphics_stage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphyte_engine = { path = "../graphyte_engine" }
graphyte_utils = { path = "../graphyte_utils" }
erupt = { version = "0.19", features = ["surface", "loading"] }
serde = { version = "1.0", features = ["derive"] }