[package]
name = "graphyte_winit_platform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphyte_engine = { path = "../graphyte_engine" }
graphyte_vk_graphics_stage = { path = "../graphyte_vk_graphics_stage" }
winit = "0.24" # Update when https://github.com/rust-windowing/winit/issues/1950 is resolved.
erupt = { version = "0.19", features = ["surface"] }