[package]
name = "graphyte_winit_platform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphyte_engine = { path = "../graphyte_engine" }
graphyte_graphics_stage = { path = "../graphyte_graphics_stage" }
winit = "0.26"
erupt = { version = "0.21", features = ["surface"] }