[package]
name = "magnetar_asset_library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnetar_engine = { path = "../magnetar_engine" }
magnetar_utils = { path = "../magnetar_utils" }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
erased-serde = "0.3"
serde_cbor = "0.11"
lz4_flex = { version = "0.8.0", default-features = false }

[dev-dependencies]
rand = "0.8"