[package]
name = "magnetar_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["re_export_logging"]
re_export_logging = []


[dependencies]
magnetar_utils = { path = "../magnetar_utils" }