[package]
name = "magnetar_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["re_export_utils"]
re_export_utils = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
magnetar_utils = { path = "../magnetar_utils" }
magnetar_asset_library = { path = "../magnetar_asset_library" }
raw-window-handle = "0.3"