[package]
name = "magnetar_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnetar_engine = { path = "../magnetar_engine" }
magnetar_winit_platform = { path = "../magnetar_winit_platform" }
magnetar_vk_graphics_stage = { path = "../magnetar_vk_graphics_stage" }
smol = "1.2.5"