[package]
name = "magnetar_winit_platform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnetar_engine = { path = "../magnetar_engine", features = ["re_export_logging"] }
winit = "0.24" # Update when https://github.com/rust-windowing/winit/issues/1950 is resolved.