[package]
name = "spacebar_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["re_export_utils"]
re_export_utils = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
spacebar_utils = { path = "../spacebar_utils" }
spacebar_asset_library = { path = "../spacebar_asset_library" }
raw-window-handle = "0.3"