[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12"
termcolor = "1.1"
num-traits = "0.2"
rayon-core = "1.9"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["rt", "rt-multi-thread"] }
