[package]
name = "zircon_assets"
version = "0.1.0"
edition = "2021"

[lib]
name = "assets"
path = "src/lib.rs"

[dependencies]
utils = { path = "../../utils" }
dashmap = "5.3.4"
arrayvec = { version = "0.7", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_yaml = "0.8"
toml = "0.5"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
zstd = "0.11"
async-compression = { version = "0.3", features = ["tokio", "zstd"] }
async-channel = "1.7.1"
tokio = { version = "1.20", features = ["fs", "io-util", "sync"] }
async-recursion = "1.0"

[dev-dependencies]
tokio = { version = "1.18", features = ["fs", "io-util", "rt", "macros", "sync"] }
rand = "0.8"
