[package]
name = "graphyte_gltf_extract_meshes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gltf_extract_meshes"
path = "src/main.rs"

[dependencies]
gltf = "1.0"
clap = { version = "3.1", features = ["derive"] }
graphyte_mesh = { path = "../../mesh" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
