[package]
name = "zr_convert_gltf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zr_convert_gltf"
path = "src/main.rs"

[dependencies]
gltf = "1.0"
clap = { version = "4.0", features = ["derive"] }
mesh = { path = "../../mesh" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.5"