[package]
name = "zr_mesh_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zr_mesh_tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
obj-rs = "0.7.1"
toml = "0.7.3"
mesh = { path = "../../mesh" }